--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <img src="logo.png" alt="Logo">
+            <img src="/logo.png" alt="Logo">
             <span class="service-name">My University Service</span>
         </div>
         <div class="header-right">
             <div class="user-info">
-                <img src="user.png" alt="User">
+                <img src="/user.png" alt="User">
                 <span class="username">Paul Demanze</span>
             </div>
             <div class="user-actions">
