--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         </div>
         <div class="header-right">
             <div class="user-info">
-                <img src="/user.png" alt="User">
-                <span class="username">Paul Demanze</span>
+                <span class="username">Firstname Lastname</span>
             </div>
             <div class="user-actions">
                 <button class="btn">Settings</button>
